Fix pagination buttons overlapping with footer on narrow (mobile) displays by slightly increasing pagination margin

--- a/static/stylesheet/style.less
+++ b/static/stylesheet/style.less
@@ -134,7 +134,7 @@ main {
   }
 
   .pagination {
-    margin: 4% 8% 2% 8%;
+    margin: 4% 8% 4% 8%;
     height: 20px;
   }
 
